crates/au-cli/tests/it/snapshots/it__scenarios__abstract-claim.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "abstract-type-claimed",
      "message": "type-def 'pane' is abstract and cannot be claimed directly; claim a concrete subtype",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/abstract-claim/claims-the-abstract-base.md",
        "line_col": {
          "end": {
            "col": 11,
            "line": 2
          },
          "start": {
            "col": 7,
            "line": 2
          }
        },
        "range": {
          "end": 14,
          "start": 10
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 20,
                        "line_col": {
                          "end": {
                            "col": 21,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/abstract-claim/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "abstract-claim"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "abstract-claim"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/abstract-claim/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "pane"
        ],
        "closure": [
          "pane"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "pane",
                "origin_path": "<root>/scenarios/abstract-claim/type/pane.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 71,
                        "line_col": {
                          "end": {
                            "col": 57,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 22
                      },
                      "file": "<root>/scenarios/abstract-claim/claims-the-abstract-base.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "should claim a concrete subtype like pane.split"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "should claim a concrete subtype like pane.split"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/abstract-claim/claims-the-abstract-base.md",
        "section_presence": null
      }
    ]
  }
}
