crates/au-cli/tests/it/snapshots/it__scenarios__abstract-marker-bad-shape.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "abstract-marker-bad-shape",
      "message": "`abstract:` must be a boolean (`true` or `false`)",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/abstract-marker-bad-shape/type/pane.type.yaml",
        "line_col": {
          "end": {
            "col": 16,
            "line": 1
          },
          "start": {
            "col": 11,
            "line": 1
          }
        },
        "range": {
          "end": 15,
          "start": 10
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": true,
    "count": 0,
    "entries": []
  }
}
